--- a/egboot-user/src/main/resources/application.properties
+++ b/egboot-user/src/main/resources/application.properties
@@ -1,1 +1,64 @@
-logging.config=classpath:logback-boot.xml
+logging.config=classpath:logback-spring.xml
+
+#the first datasource
+jdbc0.driverClassName = com.mysql.cj.jdbc.Driver
+jdbc0.url = jdbc:mysql://localhost:3306/everythinggrows_0?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc0.username = root
+jdbc0.password = root
+jdbc0.datasource.type = com.alibaba.druid.pool.DruidDataSource
+
+#the first datasource
+jdbc1.driverClassName = com.mysql.cj.jdbc.Driver
+jdbc1.url = jdbc:mysql://localhost:3306/everythinggrows_1?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc1.username = root
+jdbc1.password = root
+jdbc1.datasource.type = com.alibaba.druid.pool.DruidDataSource
+
+#the second datasource
+jdbc2.driverClassName = com.mysql.cj.jdbc.Driver
+jdbc2.url = jdbc:mysql://localhost:3306/everythinggrows_2?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc2.username = root
+jdbc2.password = root
+jdbc2.datasource.type = com.alibaba.druid.pool.DruidDataSource
+
+#the third datasource
+jdbc3.driverClassName = com.mysql.cj.jdbc.Driver
+jdbc3.url = jdbc:mysql://localhost:3306/everythinggrows_3?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc3.username = root
+jdbc3.password = root
+jdbc3.datasource.type = com.alibaba.druid.pool.DruidDataSource
+
+#the fourth datasource
+jdbc4.driverClassName = com.mysql.cj.jdbc.Driver
+jdbc4.url = jdbc:mysql://localhost:3306/everythinggrows_4?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc4.username = root
+jdbc4.password = root
+jdbc4.datasource.type = com.alibaba.druid.pool.DruidDataSource
+
+#the fifth datasource
+jdbc5.driverClassName = com.mysql.cj.jdbc.Driver
+jdbc5.url = jdbc:mysql://localhost:3306/everythinggrows_5?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc5.username = root
+jdbc5.password = root
+jdbc5.datasource.type = com.alibaba.druid.pool.DruidDataSource
+
+#the seventh datasource
+jdbc6.driverClassName = com.mysql.cj.jdbc.Driver
+jdbc6.url = jdbc:mysql://localhost:3306/everythinggrows_6?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc6.username = root
+jdbc6.password = root
+jdbc6.datasource.type = com.alibaba.druid.pool.DruidDataSource
+
+#the eigth datasource
+jdbc7.driverClassName = com.mysql.cj.jdbc.Driver
+jdbc7.url = jdbc:mysql://localhost:3306/everythinggrows_7?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc7.username = root
+jdbc7.password = root
+jdbc7.datasource.type = com.alibaba.druid.pool.DruidDataSource
+
+mybatis.typeAliasesPackage = cn.everythinggrows.boot.egboot.user.model
+mybatis.mapperLocations = classpath*:mapper/*.xml
+
+
+spring.redis.cache.clusterNodes=192.168.0.179:7000,192.168.0.179:7001,192.168.0.179:7002,192.168.0.179:7003,192.168.0.179:7005,192.168.0.179:7006
+spring.redis.cache.commandTimeout=5000
