--- a/egboot-blog/src/main/resources/application.properties
+++ b/egboot-blog/src/main/resources/application.properties
@@ -56,7 +56,7 @@ jdbc7.username = root
 jdbc7.password = root
 jdbc7.datasource.type = com.alibaba.druid.pool.DruidDataSource
 
-mybatis.typeAliasesPackage = cn.everythinggrows.boot.egboot.user.model
+mybatis.typeAliasesPackage = cn.everythinggrows.boot.egboot.blog.model
 mybatis.mapperLocations = classpath*:mapper/*.xml
 
 
@@ -64,8 +64,8 @@ spring.redis.cache.clusterNodes=192.168.0.179:7000,192.168.0.179:7001,192.168.0.
 spring.redis.cache.commandTimeout=5000
 
 ## Dubbo 服务提供者配置
-spring.dubbo.application.name=egboot-user
+spring.dubbo.application.name=egboot-blog
 spring.dubbo.registry.address=zookeeper://192.168.0.174
 spring.dubbo.protocol.name=dubbo
 spring.dubbo.protocol.port=20880
-spring.dubbo.scan=cn.everythinggrows.boot.egboot.user.model
+spring.dubbo.scan=cn.everythinggrows.boot.egboot.blog.model
