--- a/egboot-blog/pom.xml
+++ b/egboot-blog/pom.xml
@@ -8,21 +8,21 @@
         <version>2.1.3.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>cn.everythinggrows.boot</groupId>
-    <artifactId>egboot-user</artifactId>
+    <groupId>cn.everythinggrows.boot.egboot.user</groupId>
+    <artifactId>egboot-blog</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>egboot-user</name>
-    <description>egboot-user project for Spring Boot</description>
+    <name>egboot-blog</name>
+    <description>egboot-blog project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-data-jpa</artifactId>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
