--- a/egboot-blog/src/main/resources/application.properties
+++ b/egboot-blog/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 logging.config=classpath:logback-spring.xml
 
+jdbc.names=0,1,2,3,4,5,6,7
 #the first datasource
 jdbc0.driverClassName = com.mysql.cj.jdbc.Driver
 jdbc0.url = jdbc:mysql://localhost:3306/everythinggrows_0?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
