--- a/egboot-blog/pom.xml
+++ b/egboot-blog/pom.xml
@@ -33,6 +33,12 @@
             <version>1.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.101tec</groupId>
+            <artifactId>zkclient</artifactId>
+            <version>0.10</version>
+        </dependency>
+
         <!-- 使用aop模板启动器 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
