--- a/egboot-porum/src/main/resources/application.properties
+++ b/egboot-porum/src/main/resources/application.properties
@@ -64,10 +64,7 @@ mybatis.mapperLocations = classpath*:mapper/*.xml
 spring.redis.cache.clusterNodes=192.168.0.179:7000,192.168.0.179:7001,192.168.0.179:7002,192.168.0.179:7003,192.168.0.179:7005,192.168.0.179:7006
 spring.redis.cache.commandTimeout=5000
 
-## Dubbo 服务提供者配置
-spring.dubbo.application.name=egboot-forum
-spring.dubbo.registry.address=zookeeper://192.168.0.174
-spring.dubbo.protocol.name=dubbo
-spring.dubbo.protocol.port=20880
-spring.dubbo.scan=cn.everythinggrows.boot.egboot.forum.model
 
+server.port=8081
+
+USER_BASE_URL=http://localhost:8080/user
