--- a/egboot-user/pom.xml
+++ b/egboot-user/pom.xml
@@ -85,6 +85,12 @@
             <version>1.1.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.101tec</groupId>
+            <artifactId>zkclient</artifactId>
+            <version>0.10</version>
+        </dependency>
+
         <!--fastjson -->
         <dependency>
             <groupId>com.alibaba</groupId>
