--- a/egboot-portal/src/main/resources/application.properties
+++ b/egboot-portal/src/main/resources/application.properties
@@ -12,5 +12,6 @@ spring.resources.static-locations=classpath:/resources/static/,classpath:/static
 logging.config=classpath:logback-spring.xml
 
 USER_BASE_URL=http://localhost:8083/user
-BLOG_BASE_URL=http://localhost:8082/blog
+BLOG_BASE_URL=http://localhost:8088/blog
 FORUM_BASE_URL=http://localhost:8081/forum
+SEARCH_BASE_URL=http://localhost:8090/search
