--- a/egboot-porum/src/main/resources/application.properties
+++ b/egboot-porum/src/main/resources/application.properties
@@ -61,7 +61,7 @@ mybatis.typeAliasesPackage = cn.everythinggrows.boot.egboot.blog.model
 mybatis.mapperLocations = classpath*:mapper/*.xml
 
 
-spring.redis.cache.clusterNodes=192.168.0.187:7000,192.168.0.187:7001,192.168.0.187:7002,192.168.0.187:7003,192.168.0.187:7004,192.168.0.187:7005
+spring.redis.cache.clusterNodes=47.112.14.96:7000 47.112.14.96:7001 139.199.36.66:7002 139.199.36.66:7003 139.199.36.66:7004 139.199.36.66:7005
 spring.redis.cache.commandTimeout=5000
 
 
