--- a/egboot-blog/src/main/resources/application.properties
+++ b/egboot-blog/src/main/resources/application.properties
@@ -61,7 +61,7 @@ mybatis.typeAliasesPackage = cn.everythinggrows.boot.egboot.blog.model
 mybatis.mapperLocations = classpath*:mapper/*.xml
 
 
-spring.redis.cache.clusterNodes=192.168.0.187:7000,192.168.0.187:7001,192.168.0.187:7002,192.168.0.187:7003,192.168.0.187:7004,192.168.0.187:7005
+spring.redis.cache.clusterNodes=47.112.14.96:7000 47.112.14.96:7001 139.199.36.66:7002 139.199.36.66:7003 139.199.36.66:7004 139.199.36.66:7005
 spring.redis.cache.commandTimeout=5000
 
 ## Dubbo 服务提供者配置
@@ -75,6 +75,10 @@ server.port=8088
 
 USER_BASE_URL=http://localhost:8083/user
 
+portrait_dns=http://localhost:8080/static/uploadImages/portrait/
+
 blog_coverPic_dns = http://localhost:8080/static/uploadImages/cover/
 blog_coverPic=["1.jpg","2.jpg","3.jpg","4.jpg","5.jpg","6.jpg","7.jpg","8.jpg","9.jpg","10.jpg","11.jpg","12.jpg","13.jpg","14.jpg","15.jpg",\
   "16.jpg","17.jpg","18.jpg","19.jpg","20.jpg","21.jpg","22.jpg","23.jpg","24.jpg","25.jpg","26.jpg","27.jpg"]
+
+SEARCH_BASE_URL=http://localhost:8090/search
