--- a/egboot-porum/src/main/resources/application.properties
+++ b/egboot-porum/src/main/resources/application.properties
@@ -61,10 +61,11 @@ mybatis.typeAliasesPackage = cn.everythinggrows.boot.egboot.blog.model
 mybatis.mapperLocations = classpath*:mapper/*.xml
 
 
-spring.redis.cache.clusterNodes=47.112.14.96:7000 47.112.14.96:7001 139.199.36.66:7002 139.199.36.66:7003 139.199.36.66:7004 139.199.36.66:7005
+spring.redis.cache.clusterNodes=47.112.14.96:7000,47.112.14.96:7001,139.199.36.66:7002,139.199.36.66:7003,139.199.36.66:7004,139.199.36.66:7005
 spring.redis.cache.commandTimeout=5000
 
 
 server.port=8081
 
 USER_BASE_URL=http://localhost:8083/user
+portrait_dns=http://192.168.0.158:8080/static/uploadImages/portrait/
