--- a/egboot-user/src/main/resources/application.properties
+++ b/egboot-user/src/main/resources/application.properties
@@ -60,10 +60,10 @@ mybatis.typeAliasesPackage = cn.everythinggrows.boot.egboot.user.model
 mybatis.mapperLocations = classpath*:mapper/*.xml
 
 
-spring.redis.cache.clusterNodes=47.112.14.96:7000 47.112.14.96:7001 139.199.36.66:7002 139.199.36.66:7003 139.199.36.66:7004 139.199.36.66:7005
+spring.redis.cache.clusterNodes=47.112.14.96:7000,47.112.14.96:7001,139.199.36.66:7002,139.199.36.66:7003,139.199.36.66:7004,139.199.36.66:7005
 spring.redis.cache.commandTimeout=5000
 
 server.port=8083
 
-portrait_dns=http://localhost:8080/static/uploadImages/portrait/
+portrait_dns=http://192.168.0.158:8080/static/uploadImages/portrait/
 portraitList=["1.jpg","2.jpg","3.jpg","4.jpg","5.jpg","6.jpg","7.jpg","8.jpg","9.jpg","10.jpg","11.jpg","12.jpg","13.jpg","14.jpg","15.jpg"]
