--- a/egboot-blog/src/main/resources/application.properties
+++ b/egboot-blog/src/main/resources/application.properties
@@ -65,3 +65,9 @@ blog_coverPic_dns=http://192.168.0.158:8080/static/uploadImages/cover/
 blog_coverPic=["1.jpg","2.jpg","3.jpg","4.jpg","5.jpg","6.jpg","7.jpg","8.jpg","9.jpg","10.jpg","11.jpg","12.jpg","13.jpg","14.jpg","15.jpg",\
   "16.jpg","17.jpg","18.jpg","19.jpg","20.jpg","21.jpg","22.jpg","23.jpg","24.jpg","25.jpg","26.jpg","27.jpg"]
 SEARCH_BASE_URL=http://localhost:8090/search
+
+spring.application.name=egboot-blog
+eureka.client.service-url.defaultZone=http://localhost:8001/eureka/
+eureka.instance.prefer-ip-address=true
+eureka.instance.ip-address=localhost
+feign.hystrix.enabled=true
