--- a/egboot-user/src/main/resources/application.properties
+++ b/egboot-user/src/main/resources/application.properties
@@ -54,3 +54,10 @@ spring.redis.cache.commandTimeout=5000
 server.port=8083
 portrait_dns=http://192.168.0.158:8080/static/uploadImages/portrait/
 portraitList=["1.jpg","2.jpg","3.jpg","4.jpg","5.jpg","6.jpg","7.jpg","8.jpg","9.jpg","10.jpg","11.jpg","12.jpg","13.jpg","14.jpg","15.jpg"]
+
+spring.application.name=egboot-user
+eureka.client.serviceUrl.defaultZone=http://localhost:8001/eureka/
+eureka.instance.prefer-ip-address=true
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.ip-address=localhost
