--- a/egboot-portal/src/main/resources/application.properties
+++ b/egboot-portal/src/main/resources/application.properties
@@ -13,3 +13,5 @@ USER_BASE_URL=http://localhost:8083/user
 BLOG_BASE_URL=http://localhost:8088/blog
 FORUM_BASE_URL=http://localhost:8081/forum
 SEARCH_BASE_URL=http://localhost:8090/search
+
+image_dns=http://localhost:7070/articleImages/
