--- a/egboot-admin/src/main/resources/application.properties
+++ b/egboot-admin/src/main/resources/application.properties
@@ -13,11 +13,59 @@ USER_BASE_URL=http://localhost:8083/user
 BLOG_BASE_URL=http://localhost:8088/blog
 FORUM_BASE_URL=http://localhost:8081/forum
 SEARCH_BASE_URL=http://localhost:8090/search
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.initial-size=5
-spring.datasource.max-idle=10
-spring.datasource.max-wait=10000
-spring.datasource.min-idle=5
-spring.datasource.url=jdbc:mysql://192.168.0.158:3306/everythinggrows_1?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+jdbc.names=0,1,2,3,4,5,6,7
+#the first datasource
+jdbc0.driverClassName=com.mysql.cj.jdbc.Driver
+jdbc0.url=jdbc:mysql://localhost:3306/everythinggrows_0?useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc0.username=root
+jdbc0.password=root
+jdbc0.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#the first datasource
+jdbc1.driverClassName=com.mysql.cj.jdbc.Driver
+jdbc1.url=jdbc:mysql://localhost:3306/everythinggrows_1?useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc1.username=root
+jdbc1.password=root
+jdbc1.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#the second datasource
+jdbc2.driverClassName=com.mysql.cj.jdbc.Driver
+jdbc2.url=jdbc:mysql://localhost:3306/everythinggrows_2?useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc2.username=root
+jdbc2.password=root
+jdbc2.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#the third datasource
+jdbc3.driverClassName=com.mysql.cj.jdbc.Driver
+jdbc3.url=jdbc:mysql://localhost:3306/everythinggrows_3?useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc3.username=root
+jdbc3.password=root
+jdbc3.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#the fourth datasource
+jdbc4.driverClassName=com.mysql.cj.jdbc.Driver
+jdbc4.url=jdbc:mysql://localhost:3306/everythinggrows_4?useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc4.username=root
+jdbc4.password=root
+jdbc4.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#the fifth datasource
+jdbc5.driverClassName=com.mysql.cj.jdbc.Driver
+jdbc5.url=jdbc:mysql://localhost:3306/everythinggrows_5?useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc5.username=root
+jdbc5.password=root
+jdbc5.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#the seventh datasource
+jdbc6.driverClassName=com.mysql.cj.jdbc.Driver
+jdbc6.url=jdbc:mysql://localhost:3306/everythinggrows_6?useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc6.username=root
+jdbc6.password=root
+jdbc6.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#the eigth datasource
+jdbc7.driverClassName=com.mysql.cj.jdbc.Driver
+jdbc7.url=jdbc:mysql://localhost:3306/everythinggrows_7?useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc7.username=root
+jdbc7.password=root
+jdbc7.datasource.type=com.alibaba.druid.pool.DruidDataSource
+mybatis.typeAliasesPackage=cn.everythinggrows.boot.egboot.admin.model
+mybatis.mapperLocations=classpath*:mapper/*.xml
+spring.redis.cache.clusterNodes=47.112.14.96:7000,47.112.14.96:7001,139.199.36.66:7002,139.199.36.66:7003,139.199.36.66:7004,139.199.36.66:7005
+spring.redis.cache.commandTimeout=5000
+
+
+
