--- a/egboot-user/src/main/resources/application.properties
+++ b/egboot-user/src/main/resources/application.properties
@@ -1,49 +1,49 @@
 logging.config=classpath:logback-spring.xml
 #the first datasource
 jdbc0.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc0.url=jdbc:mysql://192.168.0.158:3306/everythinggrows_0?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc0.url=jdbc:mysql://localhost:3306/everythinggrows_0?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 jdbc0.username=root
 jdbc0.password=root
 jdbc0.datasource.type=com.alibaba.druid.pool.DruidDataSource
 #the first datasource
 jdbc1.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc1.url=jdbc:mysql://192.168.0.158:3306/everythinggrows_1?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc1.url=jdbc:mysql://localhost:3306/everythinggrows_1?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 jdbc1.username=root
 jdbc1.password=root
 jdbc1.datasource.type=com.alibaba.druid.pool.DruidDataSource
 #the second datasource
 jdbc2.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc2.url=jdbc:mysql://192.168.0.158:3306/everythinggrows_2?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc2.url=jdbc:mysql://localhost:3306/everythinggrows_2?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 jdbc2.username=root
 jdbc2.password=root
 jdbc2.datasource.type=com.alibaba.druid.pool.DruidDataSource
 #the third datasource
 jdbc3.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc3.url=jdbc:mysql://192.168.0.158:3306/everythinggrows_3?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc3.url=jdbc:mysql://localhost:3306/everythinggrows_3?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 jdbc3.username=root
 jdbc3.password=root
 jdbc3.datasource.type=com.alibaba.druid.pool.DruidDataSource
 #the fourth datasource
 jdbc4.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc4.url=jdbc:mysql://192.168.0.158:3306/everythinggrows_4?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc4.url=jdbc:mysql://localhost:3306/everythinggrows_4?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 jdbc4.username=root
 jdbc4.password=root
 jdbc4.datasource.type=com.alibaba.druid.pool.DruidDataSource
 #the fifth datasource
 jdbc5.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc5.url=jdbc:mysql://192.168.0.158:3306/everythinggrows_5?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc5.url=jdbc:mysql://localhost:3306/everythinggrows_5?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 jdbc5.username=root
 jdbc5.password=root
 jdbc5.datasource.type=com.alibaba.druid.pool.DruidDataSource
 #the seventh datasource
 jdbc6.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc6.url=jdbc:mysql://192.168.0.158:3306/everythinggrows_6?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc6.url=jdbc:mysql://localhost:3306/everythinggrows_6?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 jdbc6.username=root
 jdbc6.password=root
 jdbc6.datasource.type=com.alibaba.druid.pool.DruidDataSource
 #the eigth datasource
 jdbc7.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc7.url=jdbc:mysql://192.168.0.158:3306/everythinggrows_7?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc7.url=jdbc:mysql://localhost:3306/everythinggrows_7?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 jdbc7.username=root
 jdbc7.password=root
 jdbc7.datasource.type=com.alibaba.druid.pool.DruidDataSource
@@ -52,7 +52,7 @@ mybatis.mapperLocations=classpath*:mapper/*.xml
 spring.redis.cache.clusterNodes=47.112.14.96:7000,47.112.14.96:7001,139.199.36.66:7002,139.199.36.66:7003,139.199.36.66:7004,139.199.36.66:7005
 spring.redis.cache.commandTimeout=5000
 server.port=8083
-portrait_dns=http://192.168.0.158:8080/static/uploadImages/portrait/
+portrait_dns=http://localhost:8080/static/uploadImages/portrait/
 portraitList=["1.jpg","2.jpg","3.jpg","4.jpg","5.jpg","6.jpg","7.jpg","8.jpg","9.jpg","10.jpg","11.jpg","12.jpg","13.jpg","14.jpg","15.jpg"]
 
 spring.application.name=egboot-user
